8292695: SIGQUIT and jcmd attaching mechanism does not work with signal chaining library